[project]
name = "docket"
version = "0.1.0"
description = "Docket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20",
    "codespell>=2.3.0",
    "httpx>=0.27",
    "pip-audit>=2.7.0",
    "pip-licenses>=5.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docket*"]

[tool.ruff]
target-version = "py312"
line-length = 79  # PEP 8
src = ["docket", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "S", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and hard-coded values.
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Enum identity asserts (`x is Status.A`) narrow to a literal that mypy does
# not widen after a mutating method call, producing false comparison-overlaps.
strict_equality = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
